# personal-website

./: .gitignore  .sesskey  Dockerfile  README.md  app.py  github actions relevant creds  progress.md  progress_actual.md  pyproject.toml  test_uv.py
.github/workflows/: ci-cd.yml  deploy.yml
data/: site.db  site.db-shm  site.db-wal
deploy/: bootstrap_server.md  run.sh  setup-vps.sh
deploy/nginx/: personal-website.conf
deploy/systemd/: personal-website.service
tests/: __init__.py  test_app.py
tests/user_flows/: newsletter_verify_v1.md
website/: __init__.py  app.py  app.py.bak  auth.py  db.py
